tests/query_runtime_errors/branch_error_then_ok/error.txt
Error: 
    2 | select event from in where event.format != "valid" into err;
      |                                  ^^^^^^ Trying to access a non existing event key `format`
